[package]
name = "crust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "crust"
path = "src/bin/main.rs"

[lib]
name = "crust_lib"
path = "src/lib/lib.rs"

[dependencies]
anyhow = "1.0.89"
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.210", features = ["derive"] }
