[package]
name = "crust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "crust"
path = "src/bin/main.rs"

[lib]
name = "crust_lib"
path = "src/lib/lib.rs"

[dependencies]
anyhow = "1.0.89"
chrono = { version = "0.4.38", features = ["serde"] }
config = { version = "0.14.0", features = ["yaml"] }
lettre = { version = "0.11.9", features = ["tokio1", "tokio1-native-tls"] }
log = "0.4.22"
log4rs = "1.3.0"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
